# panaversity_AI-201-Fundamentals-of-Agentic-AI

./: README.md
deep_research_agent/deep-research-agent/: README.md  deep_research_system.py  main.py  planning_agent.py  pyproject.toml  report_writer.py  research_agents.py  synthesis_agent.py
deep_research_agent/deep-research-agent/deep_research_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
deep_search_agent/: README (1).md  README.md
deep_search_agent/my_deep_search_agent/: README.md  deep_research_system.py  main.py  planning_agent.py  pyproject.toml  report_writer.py  research_agents.py  synthesis_agent.py
